[package]
name = "cat_panel_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["smallvec", "parking_lot", "ansi", "local-time", "json"] }
dotenv = "0.15"
compact_str = "0.6"
smol_str = { version = "0.1", features = ["serde"] }
smallvec = { version = "1.10", features = ["const_generics", "serde", "may_dangle", "union"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["macros", "http2", "headers", "ws"] }
hyper = { version = "0.14", features = ["full"] }
figment = { version = "0.10", features = ["env", "toml", "json"] }
byte-unit = { version = "4.0", default-features = false, features = ["std", "serde"] }
async-trait = "0.1"
sea-orm = { version = "0.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.10"
rand = { version = "0.8", features = ["std", "std_rng", "getrandom", "min_const_gen", "simd_support"] }
argon2 = { version = "0.4", features = ["std"] }
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
axum-sessions = "0.4.0"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
chrono = "0.4"
forwarded-header-value = "0.1"
snmalloc-rs = "0.3"
which = "4.3"
duct = "0.13"
parking_lot = "0.12"
arc-swap = "1.5"
once_cell = "1.9"
tokio-graceful-shutdown = "0.12"
rocksdb = { version = "0.19", default-features = false, features = ["io-uring", "zstd"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"
