[package]
name = "cat_panel_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cp_macros = { path = "crates/cp_macros" }

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["smallvec", "parking_lot", "ansi", "local-time", "json"] }
dotenv = "0.15"
compact_str = "0.6"
smol_str = { version = "0.1", features = ["serde"] }
smallvec = { version = "1.10", features = ["const_generics", "serde", "may_dangle", "union"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["macros", "http2", "headers", "ws"] }
hyper = { version = "0.14", features = ["full"] }
figment = { version = "0.10", features = ["env", "toml", "json"] }
byte-unit = { version = "4.0", default-features = false, features = ["std", "serde"] }
async-trait = "0.1"
sea-orm = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.10"
rand = { version = "0.8", features = ["std", "std_rng", "getrandom", "min_const_gen", "simd_support"] }
argon2 = { version = "0.4", features = ["std"] }
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
axum-sessions = "0.4"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
chrono = "0.4"
forwarded-header-value = "0.1"
snmalloc-rs = "0.3"
which = "4.3"
duct = "0.13"
parking_lot = "0.12"
arc-swap = "1.5"
once_cell = "1.9"
tokio-graceful-shutdown = "0.12"
# 与libv8冲突(重复定义符号), 考虑改用persy,lmdb,redis...
#rocksdb = { version = "0.20", default-features = false, features = ["zstd"] }
futures = "0.3"
async-graphql = { version = "5.0", features = ["tracing", "chrono", "smol_str", "tokio-sync"] }
sysinfo = "0.27"
fnv = "1.0"
crossbeam-utils = "0.8"
humantime-serde = "1"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

deno_core = { version = "0.179.0" }
deno_ast = { version = "0.25.0", features = ["transpiling"] }
deno_runtime = { version = "0.105.0" }

# 因为axum-sessions需要sha-1 = "^0.10", 但deno_ast需要sha-1 = "=0.10.0", 所以必须手动锁定版本
sha-1 = "=0.10.0"
url = "2.3.1"
rust-embed = { version = "6.6.1", features = [] }
persy = { version = "1.4.4", optional = true }
redb = "0.15.0"
heed = "0.11.0"

[patch.crates-io]
# 强行更改libsqlite3-sys版本为0.25
sqlx = { git = "https://github.com/BoxCatTeam/sqlx", branch = "libsqlite3-sys0.25" }

[dev-dependencies]
graphql_client = "0.11"
criterion = { version = "0.4.0", features = ["html_reports"] }

[features]
default = []
io_uring = []
persy = ["dep:persy"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"

[[bench]]
name = "bench_kv_store"
harness = false

[workspace]
members = [
    "crates/cp_macros"
]
